--- a/R1.13-TP_Marienbad-etu.ipynb
+++ b/R1.13-TP_Marienbad-etu.ipynb
@@ -66,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "f8c9ccfe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "df897a3e",
    "metadata": {},
    "outputs": [
@@ -153,18 +153,18 @@
       "         /   /   /   /   /   /   /   /\n",
       "----------------------------------------------------------------------------\n",
       "\n",
-      "Il reste 8 allumettes.\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 84\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m allumettes\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     83\u001b[0m     printboard(allumettes)  \u001b[38;5;66;03m### imprime la position de jeu\u001b[39;00m\n\u001b[0;32m---> 84\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     85\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m player\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCMP\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;66;03m### c'est à l'ordinateur de jouer\u001b[39;00m\n\u001b[1;32m     86\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mL\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mordinateur choisit de retirer...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Il reste 8 allumettes.\n",
+      "\n",
+      "L'ordinateur choisit de retirer...\n",
+      "1 allumette.\n",
+      "\n",
+      "----------------------------------------------------------------------------\n",
+      "         /   /   /   /   /   /   /\n",
+      "----------------------------------------------------------------------------\n",
+      "\n",
+      "Il reste 7 allumettes.\n",
+      "\n",
+      "--À vous de jouer !--\n"
      ]
     }
    ],
@@ -1370,7 +1370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1384,7 +1384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
