--- a/R1.13-TP_Marienbad-etu.ipynb
+++ b/R1.13-TP_Marienbad-etu.ipynb
@@ -164,7 +164,475 @@
       "\n",
       "Il reste 7 allumettes.\n",
       "\n",
-      "--À vous de jouer !--\n"
+      "--À vous de jouer !--\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: 'Ajout sujet'\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n",
+      "\n",
+      "Cela ne semble pas une réponse valide.\n",
+      "Error: invalid literal for int() with base 10: ''\n",
+      "Recommencez !\n"
      ]
     }
    ],
@@ -390,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "08de7b61",
    "metadata": {},
    "outputs": [
@@ -398,18 +866,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|\n",
-      "|||\n",
-      "|||||\n",
-      "|||||||\n",
-      "\n"
+      "| \n",
+      "| | | \n",
+      "| | | | | \n",
+      "| | | | | | | \n"
      ]
     }
    ],
    "source": [
     "def display_board_with_x(l):\n",
-    "\n",
-    "    print()\n",
+    "    for i in l:\n",
+    "        print(\"| \"*i, end=\"\\n\")\n",
     "\n",
     "# Example usage:\n",
     "l=[1,3,5,7]\n",
